Sorting of Products per price

--- a/src/product.njk
+++ b/src/product.njk
@@ -167,7 +167,7 @@ permalink: /{{ price.product.name | slug}}.html
 
         <h4>Achtung:</h4>
         <p>
-          Für Kinder unter 14 Jahren nicht geeignet. Dieses Produkt enthält kleine Magnete. Verschluckte Magne- te können im Darm verkleben, schwere Infektionen hervorrufen oder sogar zum Tod führen. Suchen Sie sofort einen Arzt auf, wenn Sie Magnete verschluckt oder eingeatmet haben. Lassen Sie dieses Produkt nicht in der Nähe von Kindern oder Haustieren liegen, die die damit verbundenen Gefahren nicht einschätzen können. Wegen möglicher Störungen sollten Personen mit Herz- schrittmachern die Nähe zu den Magneten meiden.
+          Für Kinder unter 14 Jahren nicht geeignet. Dieses Produkt enthält kleine Magnete. Verschluckte Magnete können im Darm verkleben, schwere Infektionen hervorrufen oder sogar zum Tod führen. Suchen Sie sofort einen Arzt auf, wenn Sie Magnete verschluckt oder eingeatmet haben. Lassen Sie dieses Produkt nicht in der Nähe von Kindern oder Haustieren liegen, die die damit verbundenen Gefahren nicht einschätzen können. Wegen möglicher Störungen sollten Personen mit Herzschrittmachern die Nähe zu den Magneten meiden.
         </p>
 
       </div>
