Staging für ENV-Variablen vereinfacht & Shipping-Rate automatisiert

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -151,7 +151,7 @@
                   <div class="u-block">
                     <div class="u-block-container u-clearfix"><!--block_header-->
                       <h5 class="u-block-header u-text u-text-2"><!--block_header_content-->
-                        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-4-light-1 u-text-white u-btn-1" href="/Impressum">Impressum</a><!--/block_header_content-->
+                        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-4-light-1 u-text-white u-btn-1" href="/Impressum.html">Impressum</a><!--/block_header_content-->
                       </h5><!--/block_header--><!--block_content-->
                       <div class="u-block-content u-text"><!--block_content_content--><!--/block_content_content--></div><!--/block_content-->
                     </div>
@@ -161,7 +161,7 @@
                   <div class="u-block">
                     <div class="u-block-container u-clearfix"><!--block_header-->
                       <h5 class="u-block-header u-text u-text-4"><!--block_header_content-->
-                        <a href="/Datenschutz" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-4-light-1 u-text-palette-4-light-3 u-btn-2">DATENSCHUTZ</a><!--/block_header_content-->
+                        <a href="/Datenschutz.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-4-light-1 u-text-palette-4-light-3 u-btn-2">DATENSCHUTZ</a><!--/block_header_content-->
                       </h5><!--/block_header--><!--block_content-->
                       <div class="u-block-content u-text"><!--block_content_content--><!--/block_content_content--></div><!--/block_content-->
                     </div>
@@ -171,7 +171,7 @@
                   <div class="u-block">
                     <div class="u-block-container u-clearfix"><!--block_header-->
                       <h5 class="u-block-header u-text u-text-6"><!--block_header_content-->
-                        <a href="/Rueckgabe" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-4-light-1 u-text-palette-4-light-3 u-btn-3">RÜCKGABERECHT</a><!--/block_header_content-->
+                        <a href="/Rueckgabe.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-4-light-1 u-text-palette-4-light-3 u-btn-3">RÜCKGABERECHT</a><!--/block_header_content-->
                       </h5><!--/block_header--><!--block_content-->
                       <div class="u-block-content u-text"><!--block_content_content--><!--/block_content_content--></div><!--/block_content-->
                     </div>
