--- a/src/index.njk
+++ b/src/index.njk
@@ -12,7 +12,7 @@ date: 2024-05-06
     <section class="u-align-center u-clearfix u-container-align-center-xs u-grey-5 u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-section-2" id="carousel_63e2">
       <div class="u-align-center u-container-style u-custom-color-2 u-expanded-width u-group u-shape-rectangle u-group-1">
         <div class="u-container-layout u-container-layout-1">
-          <h2 class="u-text u-text-white u-text-1"> Sei kreativ und baue Deine eigenen Figuren mit den superstarken Qinkel Neodym Magnetkugeln!&nbsp;<br>Du wirst nicht aufhören können…
+          <h2 class="u-text u-text-white u-text-1"> Sei kreativ und baue Deine eigenen Figuren mit den superstarken Qinkel (R) Neodym Magnetkugeln!&nbsp;<br>Du wirst nicht aufhören können…
           </h2>
         </div>
       </div>
